welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:14: error: type mismatch;
 found   : Int(1)
 required: Boolean
	while (1)
               ^